# analyzer

./: .env.example  .gitignore  CITATION.cff  Dockerfile  Dockerfile.slim  GEMINI.md  README.md  config.ini  docker-compose.yml  manifest.example.yaml  pixi.toml  pyproject.toml  requirements.txt  test_planner.py  test_workflow.py
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml  python-test.yml
analyzer_tools/: batch.py  cli.py  config_utils.py  create_model_script.py  create_temporary_model.py  eis_interval_extractor.py  eis_measurement_splitter.py  eis_timing_extractor.py  mantid_event_splitter.py  mcp_server.py  partial_data_assessor.py  pipeline.py  planner.py  plot_time_series.py  registry.py  result_assessor.py  run_fit.py  schemas.py  state.py  tool_functions.py  welcome.py
analyzer_tools/analysis/: check_llm.py  create_model.py  create_temporary_model.py  model_from_aure.py  model_generator.py  partial_data_assessor.py  plan_data.py  result_assessor.py  run_fit.py
analyzer_tools/planner/: README.md  cli.py  experiment_design.py  instrument.py  mcmc_sampler.py  optimizer.py  report.py
analyzer_tools/reduction/: __init__.py  core.py  eis_reduce_events.py  event_filter.py  reduction.py  simple_reduction.py
analyzer_tools/skills/data-packaging/: SKILL.md
analyzer_tools/skills/fitting/: SKILL.md
analyzer_tools/utils/: iceberg_packager.py  model_utils.py  summary_plots.py
docs/: README.md  analysis_notes.md  developer_notes.md  iceberg.md  time-resolved-eis.md  workflow-vision.md
docs/example_report/: report_218281.md
models/: cu_thf.py  cu_thf_no_oxide.py  cu_thf_planner.py  cu_thf_tiny.py  ionomer_sld_1.py  ionomer_sld_2.py  ionomer_sld_3.py
scripts/: arxiv_sample_references.py  osti_sample_references.py  plot_offset_histograms.py
scripts/dragonfly/: simple_reduction.py
scripts/mantid/: README.md  docker_reduce.sh  eis_filter_events.py  eis_reduce_events.py  simple_reduction.py
skills/create-model/: SKILL.md
skills/data-organization/: SKILL.md
skills/distributable/: SKILL.md
skills/fit-evaluation/: SKILL.md
skills/fitting/: SKILL.md
skills/models/: SKILL.md
skills/partial-assessment/: SKILL.md
skills/pipeline/: SKILL.md
skills/plan-data/: SKILL.md
skills/reflectometry-basics/: SKILL.md
skills/time-resolved/: SKILL.md
tests/: test_batch.py  test_cli.py  test_config_utils.py  test_create_model_script.py  test_create_temporary_model.py  test_eis_interval_extractor.py  test_eis_measurement_splitter.py  test_eis_timing_extractor.py  test_iceberg_packager.py  test_instrument.py  test_mantid_event_splitter.py  test_mcp_server.py  test_model_from_aure.py  test_model_generator.py  test_model_utils.py  test_partial_data_assessor.py  test_pipeline.py  test_pipeline_state.py  test_plan_data_state.py  test_planner.py  test_registry.py  test_result_assessor.py  test_run_fit.py  test_run_fit_aure.py  test_simple_reduction_state.py  test_state_vendor.py  test_welcome.py
tools/: partial_data_assessor.py  result_assessor.py  run_fit.py
tools/utils/: fit_uncertainties.py  model_utils.py  summary_plots.py
