[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analyzer-tools"
version = "0.1.0"
description = "Neutron reflectometry data analysis tools"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Neutron Reflectometry Team"},
]
keywords = ["neutron", "reflectometry", "analysis", "fitting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy",
    "matplotlib",
    "refl1d==1.0.0b0",
    "bumps",
    "pydantic",
    "tqdm",
    "click",
    "scipy",
    "fastmcp",
    "pyarrow",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]
reduction = [
    "mantid",
    "lr_reduction",
]

[project.urls]
Homepage = "https://github.com/your-org/analyzer"
Repository = "https://github.com/your-org/analyzer"

[project.scripts]
analyzer-tools = "analyzer_tools.cli:main"
run-fit = "analyzer_tools.cli:run_fit_cli"
assess-partial = "analyzer_tools.cli:assess_partial_cli"
assess-result = "analyzer_tools.cli:result_assessor_cli"
create-model = "analyzer_tools.cli:create_model_cli"
eis-intervals = "analyzer_tools.cli:eis_interval_extractor_cli"
iceberg-packager = "analyzer_tools.cli:iceberg_packager_cli"
analyzer-planner = "analyzer_tools.planner.cli:main"
analyzer-mcp = "analyzer_tools.mcp_server:main"
eis-reduce-events = "analyzer_tools.cli:eis_reduce_events_cli"
simple-reduction = "analyzer_tools.cli:simple_reduction_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["analyzer_tools*"]

[tool.setuptools.package-data]
"analyzer_tools" = ["*.ini"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=analyzer_tools --cov-fail-under=40"

[tool.coverage.run]
source = ["analyzer_tools"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
fail_under = 20
show_missing = true
skip_covered = false
